--- a/esa.jsonc
+++ b/esa.jsonc
@@ -7,6 +7,12 @@
     },
     "routes": [
         {
+            "src": "^/(assets|public)/.*$",
+            "headers": {
+                "Cache-Control": "max-age=31536000"
+            }
+        },
+        {
             "src": ".*",
             "dest": "/index.html"
         }
